@@ -28,6 +28,7 @@ BETA ======= 1.8.1
 - added: controller.jsonp(method_name, obj, [headers], [beautify], [replacer]);
 - added: CSS variables likes sass, example: `$color: red;`
 - added: modificators for dynamic modification before compilation: views, styles and scripts
+- added: ObjectBuilder
 
 - updated: `F.mail(address, subject, view, [model], [callback], [language])` added language
 - updated: `F.view(name, model, [layout], [repository], [language])` added language
